fim das adaptações para a versão desktop

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
         <section class="results">
+           <div>
             <div class="amount">
                 <p>
                     Tip Amount <br> <span>/person</span>
@@ -63,6 +64,7 @@
 
                 <strong>$32.79</strong>
             </div>
+           </div>
 
             <button>Reset</button>
         </section>
